--- a/notebooks/unit3/unit3.ipynb
+++ b/notebooks/unit3/unit3.ipynb
@@ -143,7 +143,11 @@
       "cell_type": "markdown",
       "source": [
         "## Un conseil 💡\n",
-        "Il est préférable d'exécuter ce script Colab en créant une copie sur votre Google Drive. Ainsi, **en cas de dépassement de délai**, vous conserverez votre notebook enregistré et n'aurez pas à tout recommencer. Pour ce faire, vous pouvez utiliser `Ctrl + S` ou `Fichier > Enregistrer une copie dans Google Drive`. Nous allons effectuer un entraînement de 90 minutes avec 1 million d'itérations. La commande `!nvidia-smi` vous indiquera le GPU utilisé. Si vous souhaitez effectuer un entraînement plus long, par exemple 10 millions d'itérations, cela prendra environ 9 heures, ce qui peut entraîner un dépassement de délai de Colab. Dans ce cas, je vous recommande d'exécuter le script sur votre ordinateur (ou ailleurs). Cliquez simplement sur : `Fichier > Télécharger`.\n"
+        "Il est préférable d'exécuter ce script Colab en créant une copie sur votre Google Drive. Ainsi, **en cas de dépassement de délai**, vous conserverez votre notebook enregistré et n'aurez pas à tout recommencer. Pour ce faire, vous pouvez utiliser `Ctrl + S` ou `Fichier > Enregistrer une copie dans Google Drive`.   \n",
+        "Nous allons effectuer un entraînement de 90 minutes avec 1 million d'itérations.   \n",
+        "La commande `!nvidia-smi` vous indiquera le GPU utilisé.   \n",
+        "Si vous souhaitez effectuer un entraînement plus long, par exemple 10 millions d'itérations, cela prendra environ 9 heures, ce qui peut entraîner un dépassement de délai de Colab.   \n",
+        "Dans ce cas, je vous recommande d'exécuter le script sur votre ordinateur (ou ailleurs). Cliquez simplement sur : `Fichier > Télécharger`.\n"
       ],
       "metadata": {
         "id": "Nc8BnyVEc3Ys"
@@ -175,9 +179,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Install RL-Baselines3 Zoo and its dependencies 📚\n",
+        "# Installer RL-Baselines3 Zoo et ses dépendances 📚\n",
         "\n",
-        "If you see `ERROR: pip's dependency resolver does not currently take into account all the packages that are installed.` **this is normal and it's not a critical error** there's a conflict of version. But the packages we need are installed."
+        "Si vous constatez `ERROR: pip's dependency resolver does not currently take into account all the packages that are installed`.  \n",
+        "ce comportement, c'est normal et il ne s'agit pas d'une erreur critique : il y a un conflit de versions. Cependant, les paquets nécessaires sont installés.\n"
       ],
       "metadata": {
         "id": "wS_cVefO-aYg"
@@ -211,7 +216,7 @@
         "id": "4S9mJiKg6SqC"
       },
       "source": [
-        "To be able to use Atari games in Gymnasium we need to install atari package. And accept-rom-license to download the rom files (games files)."
+        "####  Pour pouvoir utiliser les jeux Atari dans Gymnasium, il faut installer le package Atari et accepter la licence ROM pour télécharger les fichiers ROM (fichiers de jeux)."
       ]
     },
     {
@@ -229,11 +234,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Create a virtual display 🔽\n",
+        "## Créer un affichage virtuel 🔽\n",
+        "Lors de la séance pratique, **nous devrons générer une vidéo de relecture. Pour ce faire, si vous effectuez l'entraînement sur une machine sans interface graphique, nous aurons besoin d'un écran virtuel pour pouvoir afficher l'environnement** (et donc enregistrer les images).\n",
         "\n",
-        "During the notebook, we'll need to generate a replay video. To do so, with colab, **we need to have a virtual screen to be able to render the environment** (and thus record the frames).\n",
-        "\n",
-        "Hence the following cell will install the librairies and create and run a virtual screen 🖥"
+        "La cellule suivante installera donc les bibliothèques, puis créera et exécutera un écran virtuel 🖥"
       ],
       "metadata": {
         "id": "bTpYcVZVMzUI"
@@ -748,11 +752,11 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
+      "gpuType": "T4",
       "include_colab_link": true
     },
     "kernelspec": {
-      "display_name": "Python 3 (ipykernel)",
-      "language": "python",
+      "display_name": "Python 3",
       "name": "python3"
     },
     "language_info": {
@@ -796,8 +800,7 @@
       ],
       "window_display": false
     },
-    "accelerator": "GPU",
-    "gpuClass": "standard"
+    "accelerator": "GPU"
   },
   "nbformat": 4,
   "nbformat_minor": 0
