--- a/notebooks/unit3/unit3.ipynb
+++ b/notebooks/unit3/unit3.ipynb
@@ -278,13 +278,11 @@
         "id": "5iPgzluo9z-u"
       },
       "source": [
-        "## Train our Deep Q-Learning Agent to Play Space Invaders 👾\n",
+        "## Entraînez notre agent d'apprentissage par renforcement profond (Deep Q-Learning) à jouer à Space Invaders 👾\n",
+        "Pour entraîner un agent avec RL-Baselines3-Zoo, il suffit de faire deux choses :\n",
         "\n",
-        "To train an agent with RL-Baselines3-Zoo, we just need to do two things:\n",
-        "\n",
-        "1. Create a hyperparameter config file that will contain our training hyperparameters called `dqn.yml`.\n",
-        "\n",
-        "This is a template example:\n",
+        "1. Créez un fichier de configuration d'hyperparamètres qui contiendra nos hyperparamètres d'entraînement appelés dqn.yml.\n",
+        "Voici un exemple de modèle :\n",
         "\n",
         "```\n",
         "SpaceInvadersNoFrameskip-v4:\n",
@@ -314,13 +312,13 @@
         "id": "_VjblFSVDQOj"
       },
       "source": [
-        "Here we see that:\n",
-        "- We use the `Atari Wrapper` that preprocess the input (Frame reduction ,grayscale, stack 4 frames)\n",
-        "- We use `CnnPolicy`, since we use Convolutional layers to process the frames\n",
-        "- We train it for 10 million `n_timesteps`\n",
-        "- Memory (Experience Replay) size is 100000, aka the amount of experience steps you saved to train again your agent with.\n",
+        "Nous constatons ici que :\n",
+        "- Nous utilisons le Atari Wrapper prétraitement des données d'entrée (réduction du nombre d'images, conversion en niveaux de gris, empilement de 4 images).\n",
+        "- Nous utilisons CnnPolicydes couches convolutionnelles pour traiter les images, car nous les utilisons pour traiter les images.\n",
+        "- Nous l'entraînons pour 10 millions n_timesteps\n",
+        "- La taille de la mémoire (relecture de l'expérience) est de 100 000, soit le nombre d'étapes d'expérience que vous avez enregistrées pour entraîner à nouveau votre agent.\n",
         "\n",
-        "💡 My advice is to **reduce the training timesteps to 1M,** which will take about 90 minutes on a P100. `!nvidia-smi` will tell you what GPU you're using. At 10 million steps, this will take about 9 hours, which could likely result in Colab timing out. I recommend running this on your local computer (or somewhere else). Just click on: `File>Download`."
+        "💡 Je vous conseille de **réduire le nombre d'étapes d'entraînement à 1 million**, ce qui prendra environ 90 minutes sur un P100. `!nvidia-smi` La commande `git log` vous indiquera le GPU utilisé. À 10 millions d'étapes, cela prendra environ 9 heures. Je recommande d'exécuter ce programme sur votre ordinateur (ou ailleurs). Cliquez simplement sur :  `File>Download`."
       ]
     },
     {
@@ -329,12 +327,12 @@
         "id": "5qTkbWrkECOJ"
       },
       "source": [
-        "In terms of hyperparameters optimization, my advice is to focus on these 3 hyperparameters:\n",
+        "En matière d'optimisation des hyperparamètres, je conseille de se concentrer sur ces 3 hyperparamètres :\n",
         "- `learning_rate`\n",
         "- `buffer_size (Experience Memory size)`\n",
         "- `batch_size`\n",
         "\n",
-        "As a good practice, you need to **check the documentation to understand what each hyperparameters does**: https://stable-baselines3.readthedocs.io/en/master/modules/dqn.html#parameters\n",
+        "Il est recommandé de consulter la documentation pour comprendre le rôle de chaque hyperparamètre : https://stable-baselines3.readthedocs.io/en/master/modules/dqn.html#parameters\n",
         "\n"
       ]
     },
